# tf_jukebox

./: README.md  Readme.md  pyproject.toml
docs/specs/: README.md  deployment.md  user_flow_mockups.md
jumpscale/sals/jukebox/: __init__.py  jukebox.py  jukebox_deploy_chatflow.py  models.py  utils.py
solutions_automation/: deployer.py
solutions_automation/jukebox_marketplace/: common.py  dash.py  digibyte.py  presearch.py
tests/sals/automated_chatflows/: chatflows_base.py  test_jukebox_dashboard.py
