[tool.poetry]
name = "tf_jukebox"
version = "0.1.0"
description = ""
packages = [{ include = "jumpscale" }]
authors = ["Ashraf Fouda <ashraf.m.fouda@gmailcom>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.6"
js-sdk = { git = "https://github.com/threefoldtech/js-sdk.git", branch = "development" }

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
